Footer will no longer have a white gap underneath on pages that aren't tall enough.

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,14 @@
     }
 }
 
+html,body {
+	background-color: #eae9e9;
+}
+
+main {
+	background-color: #fff;
+}
+
 #logo {
   display: block;
   color: #fff;
